Add edge label presentation policy